# test-task-django-rishat

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init_db.py  pyproject.toml
config/: settings.py  urls.py
docker/: Dockerfile  docker-compose.yml
docs/: api_django.md  api_drf.md  commands.md
locale/ru/LC_MESSAGES/: django.mo  django.po
payments/: admin.py  forms.py  models.py  urls.py  views.py
payments/api/: serializers.py  urls.py  views.py
payments/fixtures/: discounts.json  items.json  orders.json  taxes.json
payments/migrations/: 0001_initial.py
payments/templates/: items.html  orders.html  payment_error.html  payment_success.html
